# Wordly-Solver

./: .gitignore  ARCHITECTURE.md  DOCKER_DEPLOY.md  MIGRATION.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  docker-compose.yml
Backend/: .gitignore  Dockerfile  README.md  agent_solver.py  main.py  pyproject.toml  test_backend.py
Backend/algorithms/: __init__.py  dfs_algorithm.py
Backend/backend/: agent.py
Backend/backend/data/: wordlist.json
Backend/history/: __init__.py  game_history.py
Backend/src/backend/: main.py
Backend/src/backend/api/: __init__.py
FrontEnd/: .env.example  Dockerfile  next.config.mjs  package-lock.json
FrontEnd/src/algorithms/: base-agent.ts  dfs-algorithm.ts  index.ts  (+2 more)
backend/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/agent/: __init__.py  agent_solver.py  base.py  better_entropy.py  entropy.py  frequency.py  k_beam.py  random.py
backend/algorithms/: base_agent.py  hill_climbing_algorithm.py  simulated_annealing_algorithm.py
backend/api/: __init__.py  routes.py
backend/backend/: __init__.py
backend/schema/: __init__.py  autoplay.py  game_state.py  schema.py  solve_request.py  solve_response.py  validate.py
backend/test/: test_backend.py
backend/tests/: __init__.py  conftest.py  performance_charts.html  test_agents.py  test_api.py  test_autoplay.py  test_k_beam_agent.py  test_performance.py  test_solve.py  test_wordlist.py
backend/word_manager/: word-manager.py  word_manager.py
frontend/: .dockerignore  README.md  package-lock.json  package.json
frontend/public/: wordlist.json
(+38 files in other folders)
